# serializer version: 1
# name: TestAttachPermissionsTransform.test_ok[multi]
  list([
    dict({
      'groups': list([
        1,
        'group_5',
      ]),
      'id': 'joe',
      'permissions': dict({
        'cancel_job': False,
        'create_ref': True,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': True,
        'remove_file': False,
        'remove_job': False,
        'upload_file': True,
      }),
    }),
    dict({
      'groups': list([
        3,
        4,
      ]),
      'id': 'mae',
      'permissions': dict({
        'cancel_job': False,
        'create_ref': False,
        'create_sample': True,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      }),
    }),
    dict({
      'groups': list([
      ]),
      'id': 'wil',
      'permissions': dict({
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      }),
    }),
    dict({
      'groups': list([
        'group_2',
      ]),
      'id': 'pam',
      'permissions': dict({
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': True,
        'remove_file': False,
        'remove_job': False,
        'upload_file': True,
      }),
    }),
  ])
# ---
# name: TestAttachPermissionsTransform.test_ok[single]
  dict({
    'groups': list([
      1,
      'group_5',
    ]),
    'id': 'bob',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': True,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': True,
      'remove_file': False,
      'remove_job': False,
      'upload_file': True,
    }),
  })
# ---
# name: TestAttachUserTransform.test_mixed_id_formats
  list([
    dict({
      'id': 'doc1',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
    }),
    dict({
      'id': 'doc2',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
    }),
    dict({
      'id': 'doc3',
      'user': dict({
        'handle': 'zclark',
        'id': 2,
      }),
    }),
    dict({
      'id': 'doc4',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
    }),
  ])
# ---
# name: TestAttachUserTransform.test_ok[False]
  dict({
    'id': 'bar',
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
  })
# ---
# name: TestAttachUserTransform.test_ok[True]
  list([
    dict({
      'id': 'bar',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
    }),
    dict({
      'id': 'foo',
      'user': dict({
        'handle': 'zclark',
        'id': 2,
      }),
    }),
    dict({
      'id': 'baz',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
    }),
  ])
# ---
